shuffling inputs around to avoid selectize overlap from happening

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1493,11 +1493,6 @@ fieldset.tight {
   min-height: 0 !important;
   box-shadow: none !important;
 }
-
-#advanced-search-wrapper .form-control{
-  z-index: 0!important;
-}
-
 .selectize-input.focus {
   border: none !important;
   box-shadow: none !important;
@@ -2151,10 +2146,6 @@ a.static-nav-item {
   z-index: 4000;
 }
 #advanced-search-dropdown {
-  .selectize-dropdown.multi.form-control.selectize{
-    position: absolute;
-    transform:translateY(15px);
-  }
   .nav-tool-content-wrapper .form-control.selectize{
     min-height: 26px;
     height: 100%;
@@ -2165,6 +2156,8 @@ a.static-nav-item {
     border-radius: 4px;
     -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    position: absolute;
+    transform:translateY(15px);
   }
   .selectize-control.form-control.selectize.multi{
     padding-top: 3px !important;
@@ -9313,6 +9306,9 @@ div[aria-describedby='create-detection-dialog'] {
   }
 }
 
+#advanced-search-dropdown .form-group {
+  margin-bottom: 35px;
+}
 .form-group {
   .nested-col-row {
     margin-right: -4px;
